# llm_inference_analysis

./: .gitignore  README.md  inference.py  main.py  merge_model.py  pyproject.toml  quantize.py  quantize_awq.py  requirements.txt  test_inf_base.py  train.py  vllm_bnb_colab.ipynb
benchmark/: config.yaml  fp8.py  metrics.py  plot_benchmarks.py  plotting.py  run_all_awq_benchmarks.py  run_performance.py  run_prefill_decode.py  run_quality.py  run_scaling.py
dataset/: val.json
docs/: README.md  colab_vllm_setup.md  experimental_challenges_and_mitigations.md  metrics_comparison_and_tradeoffs.md  model_configs_and_server_params.md  quantization_serving_case_study.md  research_inference_benchmarks.md  vllm_ngram_speculative_decoding.md
outputs/: quality_case1.txt  quality_case2.txt  quality_case3.txt  quality_case4.txt  quality_case5.txt  quality_case6.txt
results/awq_sglang/: README.md  performance.csv  quality.csv  scaling.csv
results/awq_sglang_N10/: README.md  performance.csv  quality.csv  scaling.csv
results/awq_sglang_N2/: README.md  performance.csv  quality.csv  scaling.csv
results/awq_sglang_N5/: README.md  performance.csv  quality.csv  scaling.csv
results/baseline_awq/: README.md  performance.csv  performance.csv.bak  quality.csv  scaling.csv
results/bnb_nf4/: README.md  performance.csv  quality.csv  scaling.csv
results/bnb_nf4_sglang/: README.md  performance.csv  quality.csv  scaling.csv
results/fp8_sglang/: performance.csv  quality.csv  scaling.csv
results/fp8_vllm/: README.md  performance.csv  scaling.csv
results/spec_N10/: README.md  (+4 more)
(+19 files in other folders)
