[project]
name = "model-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.13.0",
    "bitsandbytes>=0.49.2",
    "datasets>=4.8.5",
    "huggingface-hub>=1.17.0",
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "peft>=0.19.1",
    "torch>=2.12.0",
    "transformers>=5.9.0",
    "trl>=1.5.1",
]
