[project]
name = "model-analysis"
version = "0.1.0"
description = "Qwen2.5-1.5B Bloom's Taxonomy Fine-Tuning, Merging, Quantization & Benchmarking"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "accelerate>=1.13.0",
    "autoawq>=0.2.9",
    "bitsandbytes>=0.49.2",
    "datasets>=4.0.0",
    "huggingface-hub>=0.25.0",
    "matplotlib>=3.9.0",
    "numpy>=1.25",
    "pandas>=2.2.0",
    "peft>=0.19.0",
    "torch>=2.11.0",
    "transformers>=4.46.0",
    "trl>=1.5.0",
    "vllm>=0.22.0",
    "gptqmodel",
]

# NOTE: vllm, bitsandbytes, and autoawq require Linux + CUDA.
# This project cannot run on Windows or macOS.
[tool.uv]
environments = ["sys_platform == 'linux'"]

[tool.uv.extra-build-dependencies]
gptqmodel = ["kernels_data", "torch>=2.11.0"]

